--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ html {
 body {
     font-family: 'Handlee', cursive;
     font-size: 13pt;
-    background-color: #efefef;
     padding: 10px;
     margin: 0;
 }
@@ -33,6 +32,7 @@ p {
     padding: 15px;
     margin-bottom: 10px;
     border-radius: 10px;
+     background-color: #efefef;
 }
 #header {
     background-image: url("https://www.sololearn.com/Uploads/header.jpg");
@@ -160,4 +160,26 @@ input, textarea {
     text-align: right;
     padding-bottom: 10px;
     color: grey;
+}
+#haha
+{
+    padding-right: 50px;
+}
+#lol{
+  padding-right: 40px;
+  font-size: 25px;
+}
+#wed{
+    font-size: 30px;
+       font-color: orange ;
+
+}
+#lis{
+    font-size: 30px;
+}
+#HomePage{
+    font-size: 40px;
+}
+.sectio{
+ 
 }
